# ebook2audiobook

./: .dockerignore  Dockerfile  DockerfileUtils  LICENSE  Mac Ebook2Audiobook Launcher.command  README.ar.md  README.cs.md  README.de.md  README.es.md  README.fa.md  README.fr.md  README.hi.md  README.hr.md  README.hu.md  README.it.md  README.ja.md  README.ko.md  README.md  README.nl.md  README.pl.md  README.pt.md  README.ru.md  README.sv.md  README.sw.md  README.tr.md  README.vi.md  README.yo.md  README.zh-CN.md  README_SWE.md  VERSION.txt  app.py  docker-compose.yml  ebook2audiobook.cmd  ebook2audiobook.py  ebook2audiobook.sh  podman-compose.yml  pyproject.toml  requirements.txt  setup.py
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/scripts/: translate_readme.py
.github/workflows/: ARM_docker_build_workflow.yml  Docker-Build.yml  DockerMacWorkflow.yml  E2A-Test.yml  MacWorkflowTest.yml  README.md  Ubuntu-Build+Test-Docker.yml  bark-test-ubuntu-headless.yml  cleanup-offline-runners.yml  custom-command.yml  dev-docker-test.yml  docker-build+test.yml  docker-cleanup.yml  docker_build_workflow.yml  fairseq-test-ubuntu-headless.yml  full-test-ubuntu-headless.yml  lite-test-ubuntu-headless.yml  mini_workflow.yaml  readme.yml  run-ubuntu-headless-ebook2audiobook.yml  stale.yml  translate-readme-python.yml  ubuntu-build+test-docker.yml  update-huggingface-space.yml  vits-test-ubuntu-headless.yml  x86_docker_build_workflow.yml  xtts-test-ubuntu-headless.yml  yourtts-test-ubuntu-headless.yml
Mac Ebook2Audiobook Launcher.app/Contents/: Info.plist
Notebooks/: colab_ebook2audiobook.ipynb  colab_ebook2audiobookxtts.ipynb  colab_xtts_finetune_webui.ipynb  kaggle-ebook2audiobook.ipynb
Notebooks/Kaggel Archive Code/: README.md  Worker_2T4.sh  ebook2audiobook.py  p1.py  p2a_worker_gpu1.py  p2a_worker_gpu2.py  p3.py
dockerfiles/: HuggingfaceDockerfile  UbuntuCudaDockerfile
ebook2audiobook.egg-info/: PKG-INFO  requires.txt
ebook2audiobookXTTS.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
lib/: .pbtk.py  __init__.py  conf.py  functions.py  lang.py  models.py
lib/classes/: argos_translator.py  background_detector.py  redirect_console.py  silent_tqdm.py  tts_manager.py  voice_extractor.py
patches/: tokenizer.py
readme/: README.it.md  README_AR.md  README_ARA.md  README_CES.md  README_CN.md  README_DEU.md  README_FA.md  README_FRA.md  README_GER.md  README_HIN.md  README_HRV.md  README_HUN.md  README_ITA.md  README_JPN.md  README_KOR.md  README_KR.md  README_NLD.md  README_POL.md  README_POR.md  README_RUS.md  README_SPA.md  README_TUR.md  README_VIE.md  README_ZHO.md
tools/: all_lang_test.py  convert_24khz_to_16khz.bat  createEXE.ps1  generate_ebooks.py  gpu_notebook_test.py  gpu_test.py  m4b_chapter_extractor.py  normalize_wav_file.py  normalize_wav_folder.py  npz_to_wav.py  trim_silences.py  wav_to_npz.py
tools/workflow-testing/: long_test.txt  test4.txt  test5.txt  urd-script_davanagari-test.txt
voices/aka/: default.txt
voices/amh/: default.txt
voices/ara/: default.txt
voices/asm/: default.txt
voices/bam/: default.txt
voices/ben/: default.txt
voices/bul/: default.txt
voices/cat/: default.txt
voices/ceb/: default.txt
voices/ces/: default.txt
voices/cmn/: default.txt
voices/cym/: default.txt
voices/dan/: default.txt
voices/deu/: default.txt
voices/div/: default.txt
voices/ell/: default.txt
voices/eng/: default.txt
voices/est/: default.txt
voices/eus/: default.txt
voices/ewe/: default.txt
voices/fas/: default.txt
voices/fin/: default.txt
voices/fra/: default.txt
voices/gle/: default.txt
voices/grn/: default.txt
voices/guj/: default.txt
voices/hat/: default.txt
voices/hau/: default.txt
voices/heb/: default.txt
voices/hin/: default.txt
voices/hrv/: default.txt
voices/hun/: default.txt
voices/ilo/: default.txt
voices/ind/: default.txt
voices/isl/: default.txt
(+250 files in other folders)
