[build-system]
name = "ebook2audiobook"
requires = ["setuptools >= 64"]
build-backend = "setuptools.build_meta"

[tool.poetry]
name = "ebook2audiobook"
version = "0.0.0"

[tool.setuptools.dynamic]
version = {file = "VERSION.txt"}

[project]
name = "ebook2audiobook"
description = "Convert eBooks to audiobooks with chapters and metadata"
authors = [
    { name = "Drew Thomasson" }
]
dependencies = [
	"argostranslate",
	"beautifulsoup4",
	"cutlet",
	"deep_translator",
	"demucs",
	"docker",
	"ebooklib",
	"fastapi",
	"fugashi",
	"gradio>=5.42.0",
	"hangul-romanize",
	"indic-nlp-library",
	"iso-639",
	"jieba",
	"soynlp",
	"pythainlp",
	"pydub",
	"pyannote-audio",
	"mutagen",
	"nvidia-ml-py",
	"PyOpenGL",
	"pypinyin",
	"ray",
	"regex",
	"translate",
	"tqdm",
	"unidic",
	"pymupdf4llm",
	"sudachipy",
	"sudachidict_core",
	"transformers==4.51.3",
	"coqui-tts[languages]==0.26.0",
	"torchvggish"
]
readme = "README.md"
requires-python = ">3.9,<3.13"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
scripts = { "ebook2audiobook" = "app:main" }

[project.urls]

"Homepage" = "https://github.com/DrewThomasson/ebook2audiobook"
